# IDAO-2022

./: .gitignore  Makefile  README.md  baseline.py  config.yaml  dockerfile  generate_submission.py  pyproject.toml  requirements.txt  run.sh  submission.csv  train.sh
